[package]
name = "libmf"
version = "0.2.0"
description = "Large-scale sparse matrix factorization for Rust"
repository = "https://github.com/ankane/libmf-rust"
license = "BSD-3-Clause"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"
exclude = ["vendor/libmf/demo/*", "vendor/libmf/windows/*"]
links = "mf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
