[package]
name = "libmf"
version = "0.2.2"
description = "Large-scale sparse matrix factorization for Rust"
repository = "https://github.com/ankane/libmf-rust"
license = "BSD-3-Clause"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.63.0"
readme = "README.md"
exclude = ["vendor/libmf/demo/*", "vendor/libmf/windows/*"]
links = "mf"

[lib]
doctest = false

[dependencies]

[build-dependencies]
cc = "1.0"
